# retail-demand-platform

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  retrain.yml
dbt_project/: .user.yml  dbt_project.yml  profiles.yml
dbt_project/models/marts/: dim_product.sql  fct_daily_sales.sql  schema.yml
dbt_project/models/staging/: sources.yml  stg_transactions.sql
docs/: dagster-to-airflow.md
src/retail_platform/: __init__.py  assets.py  config.py  definitions.py  features.py  ingest.py  promotion.py  spark_features.py  training.py
tests/: conftest.py  test_features.py  test_ingest.py  test_pipeline_e2e.py  test_promotion.py  test_spark_features.py
