[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-demand-platform"
version = "0.1.0"
description = "Orchestrated retail demand-forecasting platform: Dagster + dbt + DuckDB + LightGBM."
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "pipeline: slow end-to-end materialization tests (download + dbt + train)",
    "spark: PySpark parity tests (need a JVM; run in their own CI job)",
]
